fix jumping fonts

--- a/src/style.css
+++ b/src/style.css
@@ -39,6 +39,7 @@ body {
 
 .input {
   font-family: inherit;
+  font-size: 16px;
   height: 70px;
   width: 100%;
   padding-left: 62px;
@@ -49,6 +50,7 @@ body {
 }
 
 .input-small {
+  font-size: 14px;
   height: 42px;
   padding-left: 33px;
 }
